# workoutbuddy

./: .gitignore  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/api/routes/: health.py
apps/api/app/core/: config.py  db.py
apps/api/app/tests/: conftest.py
apps/api/app/tests/integration/: conftest.py
apps/api/app/tests/integration/api/: test_health.py
apps/api/app/tests/unit/core/: test_config.py  test_db.py
arch-guidelines/: 00-README.md  01-monorepo-structure.md  02-fastapi-guidelines.md  03-nextjs-guidelines.md  04-infrastructure.md  05-cicd.md  06-testing.md  07-security.md  08-development-workflow.md  09-decision-records.md
